--- a/src/toDo/toDo.css
+++ b/src/toDo/toDo.css
@@ -1,9 +1,9 @@
-.Create_ToDo_Container{
+.createToDoContainer{
     margin-top: 1vh;
     display: flex;
     justify-content: center;
-    gap: 0.1vw;
+    padding-left: 2%;
 }
-.Create_ToDo_Input_Box{
+.createToDoInputBox{
     width: 20vw;
 }
